// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store should combine and fire only once 1`] = `
Object {
  "UIEntities": Object {},
  "UIIds": Array [],
  "entities": Object {},
  "filter": "",
  "ids": Array [],
}
`;

exports[`store should combine and fire only once 2`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
  ],
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "filter": "",
  "ids": Array [
    1,
  ],
}
`;

exports[`store should combine and fire only once 3`] = `
Object {
  "UIEntities": Object {
    "1": Object {
      "id": 1,
      "open": false,
    },
  },
  "UIIds": Array [
    1,
  ],
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "foo",
    },
  },
  "filter": "hello",
  "ids": Array [
    1,
  ],
}
`;

exports[`store should reset store 1`] = `
Object {
  "entities": Object {
    "1": Object {
      "completed": false,
      "id": 1,
      "title": "todo 1",
    },
  },
  "filter": "foo",
  "ids": Array [
    1,
  ],
}
`;

exports[`store should reset store 2`] = `
Object {
  "entities": Object {},
  "filter": "",
  "ids": Array [],
}
`;
